k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  namespace: APP_NAME
spec:
  selector:
    app: APP_NAME
  ports:
    - port: 80
      targetPort: 8080
